...
            android:visibility="invisible"
            tools:visibility="visible"/>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/todo_recycler"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/item_todo"
            tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
